[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/training_capabilities_game/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Text.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/UI/BackgroundPanel.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/about_orange.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/power_orange.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 4
border_color = Color( 0.964706, 0.890196, 0.184314, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 4
border_color = Color( 0.964706, 0.890196, 0.184314, 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 15
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 8 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 90.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ScoreContainer"]
margin_left = 483.0
margin_right = 540.0
margin_bottom = 90.0
size_flags_horizontal = 6
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.74902, 0.462745, 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.141176, 0.266667, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -235.0
margin_right = 235.0
margin_bottom = 146.0
mouse_filter = 2
custom_constants/separation = 65
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="MainContainer"]
margin_right = 470.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.788235, 0.462745, 0.301961, 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.141176, 0.266667, 1 )
text = "Pop the right answers!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 100.0
margin_right = 470.0
margin_bottom = 141.0
custom_constants/separation = 245

[node name="PlayButton" type="Button" parent="MainContainer/MenuContainer"]
margin_right = 112.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
flat = true

[node name="Label" type="Label" parent="MainContainer/MenuContainer/PlayButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -17.5
margin_right = -1.0
margin_bottom = 17.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.788235, 0.462745, 0.301961, 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.141176, 0.266667, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="MainContainer/MenuContainer"]
margin_left = 357.0
margin_right = 470.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
flat = true

[node name="Label" type="Label" parent="MainContainer/MenuContainer/MenuButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -17.5
margin_right = 87.0
margin_bottom = 17.5
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.788235, 0.462745, 0.301961, 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.141176, 0.266667, 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="InfoButton" type="TextureButton" parent="."]
anchor_left = 0.921875
anchor_right = 1.0
anchor_bottom = 0.138889
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExitButton" type="TextureButton" parent="."]
anchor_left = 0.0390625
anchor_right = 0.117188
anchor_bottom = 0.138889
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Popup" type="PopupDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="Popup"]
position = Vector2( 20, 20 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Desc" type="Label" parent="Popup"]
anchor_left = -4.675
anchor_top = -3.1
anchor_right = 5.725
anchor_bottom = 4.475
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Answer as many questions as you can before the times runs out!

To answer the questions just tap on the blue circles containing the answers.

Keep an eye at the countdown bar at the bottom of the screen to know how much time you have left."
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackButton" type="Button" parent="Popup"]
anchor_left = -0.5
anchor_top = 5.5
anchor_right = 1.6
anchor_bottom = 6.525
size_flags_horizontal = 3
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Popup/BackButton"]
anchor_right = 1.0
anchor_bottom = 0.853659
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="Popup/BackButton"]
anchor_left = -0.47619
anchor_top = -10.5366
anchor_right = 1.54762
anchor_bottom = -9.2195
margin_right = 7.62939e-06
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Rules"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="PopupDialog" parent="."]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Exit"]
anchor_left = -12.3
anchor_top = -6.5
anchor_right = 13.3
anchor_bottom = 7.7
margin_top = -7.99997
color = Color( 0, 0, 0, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="Exit"]
position = Vector2( 20, 4 )
scale = Vector2( 0.307, 0.192 )
texture = ExtResource( 3 )

[node name="MenuButton" type="Button" parent="Exit"]
anchor_left = -2.1
anchor_top = -0.3
anchor_bottom = 0.725
size_flags_horizontal = 3
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Exit/MenuButton"]
anchor_right = 1.0
anchor_bottom = 0.853659
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="QuitButton" type="Button" parent="Exit"]
anchor_left = 1.3
anchor_top = -0.3
anchor_right = 3.4
anchor_bottom = 0.725
size_flags_horizontal = 3
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Exit/QuitButton"]
anchor_right = 1.0
anchor_bottom = 0.853659
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = " Quit"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="MainContainer/MenuContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainContainer/MenuContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Popup/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Exit/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Exit/QuitButton" to="." method="_on_QuitButton_pressed"]
